Reorder clipboard data types in ui/base/clipboard/clipboard.h

The order in which the data types (formats) are listed in that file is
used when transferring Chrome's clipboard contents to the OS clipboard.
In some OSes, the order in which the data types are written to the
clipboard matters -- an earlier type may represent the data with more
accuracy than a later type.

This CL sets up a reasonable order, and fixes an image copying bug.

BUG=650724
TEST=manual, using the repro steps in the bug

Review-Url: https://codereview.chromium.org/2394773003
Cr-Commit-Position: refs/heads/master@{#423349}

Former-commit-id: 736fcf0e7bef083610434b607e855df13cdccc79